# dwire-gdb

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: debug.c  debug.h  debugwire.c  debugwire.h  error.c  error.h  gdbserver.c  gdbserver.h  main.c  serial.c  serial.h  utils.c  utils.h
tests/: check_error.c  check_serial.c  check_utils.c
